feat: add custom cache manager