@@ -1,25 +1,58 @@
 package com.kma.scheduler.universityscheduler;
 
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
+
+import org.springframework.beans.factory.BeanClassLoaderAware;
 import org.springframework.cache.Cache;
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.concurrent.ConcurrentMapCache;
+import org.springframework.lang.Nullable;
 
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+public class CustomCacheManager implements CacheManager, BeanClassLoaderAware {
 
-public class CustomCacheManager implements CacheManager {
-    ConcurrentMapCache cacheHashMap = new ConcurrentMapCache("student-cache");
+    private final ConcurrentMap<String, Cache> cacheMap = new ConcurrentHashMap<>(16);
 
-    @Override
-    public Cache getCache(String name) {
-        System.out.println("Get cache");
-
-        return (Cache) cacheHashMap.get(name);
+    public CustomCacheManager(String name) {
+        createCache(name);
     }
 
     @Override
     public Collection<String> getCacheNames() {
-        return Set.of("student-cache");
+        return Collections.unmodifiableSet(this.cacheMap.keySet());
+    }
+
+    @Override
+    @Nullable
+    public Cache getCache(String name) {
+        Cache cache = this.cacheMap.get(name);
+        if (cache == null) {
+            synchronized (this.cacheMap) {
+                cache = this.cacheMap.get(name);
+                if (cache == null) {
+                    cache = createCache(name);
+                    this.cacheMap.put(name, cache);
+                }
+            }
+        }
+        return cache;
+    }
+
+    @Override
+    public void setBeanClassLoader(ClassLoader classLoader) {
+        recreateCaches();
+    }
+
+    private void recreateCaches() {
+        for (Map.Entry<String, Cache> entry : this.cacheMap.entrySet()) {
+            entry.setValue(createCache(entry.getKey()));
+        }
+    }
+
+    protected Cache createCache(String name) {
+        return new ConcurrentMapCache(name);
     }
 }
